# ta-launcher

./: .gitignore  README.md  bun.lockb  index.html  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: build.yml  main.yml
public/configs/defaultini/: tribes.ini
public/configs/defaultinput/: TribesInput.ini
public/configs/defaulttribeshelptext/: TribesHelpText.ini
public/configs/defaulttribesuser/: TribesUser.ini
public/configs/evil/: tribes.ini
public/configs/evillow/: tribes.ini
public/configs/veryhigh/: tribes.ini
public/configs/verylow/: tribes.ini
src/: App.tsx  AppRoutes.tsx  index.css  interfaces.ts  main.tsx  routes.ts  styles.module.css  theme.ts  utils.ts
src-tauri/: .taurignore  Cargo.toml  main.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/scripts/: route_decoder_script.py
src-tauri/sola/: log-2023-11-11 12-23-46.txt  log-2023-11-11 12-34-04.txt  log-2023-11-12 00-20-42.txt  log-2023-11-12 13-56-22.txt  log-2023-11-12 14-59-04.txt  log-2023-11-13 01-49-43.txt  log-2023-11-14 05-28-35.txt  log-2023-11-14 05-30-01.txt
src-tauri/src/: main.rs
src-tauri/src/commands/: config_backup_manager.rs  config_ini.rs  config_manager.rs  config_parser_command.rs  config_preset_manager.rs  constants.rs  data.rs  directory_shortcuts.rs  directory_shortcuts_command.rs  downloader_command.rs  fetch_available_dlls.rs  fetch_package_metadata_command.rs  fetch_packages_command.rs  fetch_player_counts.rs  fetch_players_command.rs  find_executable_command.rs  find_game_path.rs  get_available_fonts_command.rs  get_config_files.rs  inject_command.rs  launch_game.rs  launch_game_command.rs  log_cleaner_command.rs  mod.rs  package_downloader.rs  packages.rs  python_decoder_command.rs  route_decoder_command.rs  route_parser_command.rs  routes.rs  util_command.rs  util_commands.rs
src/Routes/: routes.ts
src/components/: AdvancedConfigSection.tsx  CardGradient.module.css  CardGradient.tsx  ColorBox.tsx  ConfigBackupManager .tsx  ConfigCard.tsx  ConfigSettingsTable.tsx  ConfigStep.tsx  ConfigToggleSection.tsx  DirectoryShortcuts.tsx  DownloadProgressIndicator.tsx  FolderLinks.tsx  Footer.tsx  GameLauncher.tsx  GamePathStep.tsx  Header.module.css  Header.tsx  Injector.tsx  LaunchOptionsStep.tsx  LogFileCleanup.tsx  NavbarNested.module.css  NavbarNested.tsx  NotificationPopup.tsx  PackageCard.tsx  PackageTable.tsx  ReleaseNotesCard.tsx  RouteControls.tsx  RouteFilters.tsx  RouteGraphs.tsx  RouteTable.tsx  RoutesGraph.tsx  SensitivityCalculator.tsx  SensitivityConverter.tsx  SimpleConfigSection.tsx  UsefulResources.tsx  componentStyles.css
src/components/GameLauncher/: GameLauncher.module.css  GameLauncher.tsx
src/components/Header/: Header.tsx
src/components/Injector/: Injector.module.css  Injector.tsx
src/components/NavbarNested/: NavbarNested.module.css  NavbarNested.tsx
src/components/PackageCard/: PackageCard.tsx
src/components/pages/: AdvancedConfigPage.tsx  BasicConfigPage.tsx  ConfigPage.tsx  FirstTimeSetup.tsx  Home.tsx  MainPage.tsx  PackageManagerPage.tsx  ResourcesPage.tsx  RouteManagerPage.tsx  SettingsPage.tsx
src/context/: SettingsContext.tsx  ThemeContext.tsx
src/contexts/: ConfigContext.tsx  DownloadContext.tsx
src/data/: configPresets.ts  iniFields.ts  usefulResources.ts
src/utils/: config.ts  configPresets.ts  formatters.ts  iniFields.ts  usefulResources.ts  utils.ts
src/views/: ConfigView.tsx  HomeView.tsx  LoginView.tsx  PackagesView.tsx  RoutesView.tsx  ServerBrowserView.tsx  SettingsView.tsx
src/views/HomeView/: HomeView.module.css  HomeView.tsx
src/views/ServerBrowserView/: ServerBrowserView.tsx
src/views/Settings/: SettingsView.tsx
src/views/Setup/: SetupView.module.css  SetupView.tsx
