[package]
name = "app"
version = "0.1.0"
description = "TA-Launcher"
authors = ["dbd"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5.2", features = [ "api-all"] }
dll-syringe = "0.15.2"
ctor = "0.2.5"
winapi = { version = "0.3.9", features = ["consoleapi", "minwindef"] }
chrono = "0.4.19"
reqwest = { version = "0.11", features = ["json"] }
serde_yaml = "0.9.27"
tokio = { version = "1", features = ["full"] }
walkdir = "2.3.2"
regex = "1"
zip = "0.6.6"
tempfile = "3.8.1"
futures = "0.3"
font-loader = "0.11.0"
sysinfo = "0.29.10"
directories = "5.0.1"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort" # Strip expensive panic cleanup logic
codegen-units = 1 # Comiles creates one after another
lto = true # Enable link to optimisations
opts-level = "s" # Optimise for binary size
# strip = true strip symbols from the binary