[package]
name = "ta-launcherv2"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = [] }
tauri-plugin-shell = "2.0.0-beta"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.120"
tauri-plugin-fs = "2.0.0-beta.11"
tauri-plugin-dialog = "2.0.0-beta.11"
dirs = "5.0.1"          # Used to get the user's home directory
winreg = "0.52.0"       # Used to read steam install path
env_logger = "0.11.4"   # Used to log to console
log = "0.4.14"          # Used to log to console
vdf = "0.1.0"           # Used to parse steam libraryfolders.vdf
serde_yaml = "0.9.34"   # Used to parse the config file
reqwest = "0.12.5"      # Used to get package info
